Changes in db connection

--- a/config.env
+++ b/config.env
@@ -1,5 +1,6 @@
-MONGO_URI=mongodb://127.0.0.1:27017/ecanteen
+MONGO_URI=mongodb+srv://abusufiyan3147:fZXqtDNnTVdexiDj@cluster0.dp7wy.mongodb.net/ecanteen?retryWrites=true&w=majority&appName=Cluster0
 SESSION_SECRET = mysecretkey
 PORT=4000
 RAZORPAY_ID_KEY="rzp_test_YrRbCdUF72WY6Z"
 RAZORPAY_SECRET_KEY="NdWtji4mSDdQlGUdKdtJLGRD"
+
